SourceMetaData/src/objects/Confirm_Service_Codes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>For use with the confirm integration</description>
    <fields>
        <fullName>Service_Code__c</fullName>
        <description>Confirm service code</description>
        <inlineHelpText>Confirm service code</inlineHelpText>
        <label>Service Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <description>Confirm Service Description</description>
        <inlineHelpText>Confirm Service Description</inlineHelpText>
        <label>Service Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject_Code__c</fullName>
        <description>Confirm subject code (required, unique)</description>
        <inlineHelpText>Confirm subject code (required, unique)</inlineHelpText>
        <label>Subject Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Confirm Service Codes</label>
</CustomObject>